# NoGamepads

./: .gitignore  Cargo.toml  Config_Export.toml  CopyRight  LICENSE-MIT  LICENSE-THIRD-PARTY  Project_Export.toml  README.md  Release.toml
.cargo/: config.toml
.cargo/resources/scripts/: install_completion_powershell.ps1
.cargo/scripts/: generate_documents.bat  release_files_win  release_project.bat
.cargo/scripts/release_console/: generate_console_release_file.bat
.obsidian/: workspace.json
apps/client/: Cargo.toml
apps/client/src/: lib.rs
apps/client/src/bevy_plugins/: plugin_client_app.rs
apps/client/src/data/: layout_data.rs
apps/console/: Cargo.toml
bindings/c/: Cargo.toml  build.rs
bindings/c/src/: lib.rs
bindings/c/src/data_c/: connection_callback_message_c.rs  connection_message_c.rs  control_message_c.rs  game_message_c.rs  game_profile_c.rs  mod.rs  player_info_c.rs
bindings/c/src/service_c/: mod.rs  padclient.rs  padserver.rs
client/: Cargo.toml
client/src/: main.rs  plugin_client.rs
client/src/bevy_plugins/: mod.rs  plugin_client_app.rs
client/src/data/: mod.rs
console/: Cargo.toml
console/src/: utils.rs
console/src/gui/: controller_app.rs  mod.rs
core/: Cargo.toml
core/bindings/: About_bindings.md
core/bindings/c_lang/: Cargo.toml
core/bindings/c_lang/src/data/: mod.rs  ngpd_player.rs
core/bindings/lang/clang/: CLang_bindings.md  Cargo.toml  Generate.toml  build.rs
core/bindings/lang/clang/binding_example/: .gitignore  CMakeLists.txt  main.c  tcp_client.c  tcp_server.c
core/bindings/lang/clang/configures/: nogamepads_data.toml  nogamepads_data_cpp.toml  nogamepads_utils.toml
core/bindings/lang/clang/headers/: ngpd_player.h  nogamepads.h  nogamepads_data.h  nogamepads_data_cpp.h  nogamepads_utils.h
core/bindings/lang/clang/src/: lib.rs  logger_utils.rs
core/bindings/lang/clang/src/converter/: mod.rs  string_converter.rs
core/bindings/lang/clang/src/data/: mod.rs  ngpd_controller.rs  ngpd_game.rs  ngpd_game_info.rs  ngpd_message.rs  ngpd_player.rs
core/bindings/lang/clang/src/service/: mod.rs  ngpd_service_types.rs  ngpd_tcp_service.rs
core/bindings/lang/csharp/: .gitignore
core/bindings/lang/csharp/NoGamepads_CharpBindings/: .gitignore  NoGamepads_CharpBindings.sln
core/bindings/lang/csharp/NoGamepads_CharpBindings/.run/: Example.run.xml  Generate Bindings.run.xml  Generate Csharp Bindings.run.xml  Run Example.run.xml
core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Bindings/: NoGamepads_Bindings.csproj  Program.cs
core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Core/: NoGamepads_Core.csproj  PtrStringConverter.cs
core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Core/Data/: ControllerData.cs  GameArchiveData.cs  GameData.cs  IRawData.cs  IRustData.cs  LoggerManagement.cs  Player.cs  PlayerList.cs  Status.cs
core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Core/Data/Message/: ControlEvent.cs  ControlMessage.cs  ExitReason.cs  GameMessage.cs
core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Core/Runtime/: ControllerRuntime.cs  GameRuntime.cs
core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Core/Services/: ServiceType.cs
core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Core/Services/Tcp/: PadTcpClient.cs  PadTcpServer.cs
core/bindings/lang/csharp/NoGamepads_CharpBindings/NoGamepads_Example/: NoGamepads_Example.csproj  Program.cs
core/examples/: connect.rs  start_client_console.rs  start_server_console.rs  tcp_server.rs  tetris_multicmd_game.rs
core/src/: lib.rs  message_encoders.rs
core/src/data/: mod.rs
core/src/data/controller/: controller_cli.rs  controller_data.rs  controller_runtime.rs  implements.rs  mod.rs  structs.rs
core/src/data/controller/cli/: cli_command.rs  mod.rs
core/src/data/controller/runtime/: implements.rs  mod.rs  structs.rs
core/src/data/game/: game_cli.rs  game_data.rs  game_runtime.rs  implements.rs  mod.rs  structs.rs  types.rs
core/src/data/game/cli/: cli_command.rs
core/src/data/game/runtime/: implements.rs  structs.rs
core/src/data/message/: enums.rs  implements.rs  message_encoders.rs  message_enums.rs  mod.rs  traits.rs
core/src/data/player/: implements.rs  mod.rs  player_data.rs  structs.rs
core/src/pad_data/: game_layout.rs  game_profile.rs  layout.rs  mod.rs  pad_messages.rs  pad_player_info.rs
core/src/pad_io/: client.rs  client_debug_cli.rs  server.rs  server_debug_cli.rs
core/src/pad_service/: client.rs  client_debug_cli.rs  mod.rs  server.rs  server_debug_cli.rs
core/src/service/: mod.rs  service_runner.rs  service_types.rs
core/src/service/cli_addition/: mod.rs  runtime_consoles.rs  utils.rs
core/src/service/tcp_network/: long_connection.rs  mod.rs
core/src/service/tcp_network/pad_client/: implements.rs  mod.rs  pad_client_service.rs  structs.rs
core/src/service/tcp_network/pad_server/: implements.rs  mod.rs  pad_server_service.rs  structs.rs
core/src/service/tcp_network/utils/: mod.rs  stream_utils.rs  tokio_utils.rs
core_c/: Cargo.toml  build.rs
core_c/src/: lib.rs  test.rs
core_c/src/data_c/: common.rs  connection_callback_message_c.rs  connection_message_c.rs  control_message_c.rs  game_message_c.rs  game_profile_c.rs  player_info_c.rs  player_info_list_c.rs
core_c/src/service_c/: common.rs  mod.rs  padclient.rs  padserver.rs
core_csharp/NoGamepadsSharp/: NoGamepadsSharp.sln
core_csharp/NoGamepads_Sharp/: NoGamepads_Sharp.sln
core_csharp/NoGamepads_Sharp/NoGamepads_Sharp/: Class1.cs
documents/临时/: About Toolchain - 关于 Rust 工具链.md  路线.md
export/: .gitignore  Cargo.toml
export/dev/: LICENSE-THIRD-PARTY
export/dev/bridge/: nogamepads.h  nogamepads_cpp.h
export/docs/: How_to_export.md
release/: Cargo.toml
release/0.1.0/: LICENSE-LGPL-2
release/0.1.0/bridge/: nogamepads.h  nogamepads_cpp.h
release/latest/: LICENSE-THIRD-PARTY
src/: console_utils.rs  convert_utils.rs  file_system_utils.rs  lib.rs  logger_utils.rs  macros.rs  string_utils.rs
(+8 files in other folders)
