[package]
name = "nogamepads-console"
description = "This crate provides a set of tools for simulating and deploying the client and server of the NoGamepads library."
edition = "2024"
version.workspace = true

[dependencies]
nogamepads-core = { path = "../core" }
clap = { version = "4.5.38", features = ["derive"] }
rand = { version = "0.9.1", features = [] }
rpassword = "7.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
prettytable-rs = "0.10.0"