[package]
name = "nogamepads-core"

homepage = "https://github.com/CatilGrass/NoGamepads"
repository = "https://github.com/CatilGrass/NoGamepads"
readme = "../README.md"

edition = "2024"

[dependencies]
nogamepads = { path = "../../NoGamepads" }
bincode = { version = "2.0.1", features = ["serde"]}
clearscreen = "4.0.1"
hex = "0.4.3"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.38", features = ["derive"] }
sha1 = "0.10.6"
log = "0.4.27"

[lib]
name = "nogamepads_lib_rs"
crate-type = [ "rlib"]