[package]
name = "nogamepads-client"
edition = "2024"
version.workspace = true

[dependencies]
nogamepads = { path = "../../../NoGamepads" }
nogamepads-core = { path = "../../core" }

serde = { version = "1.0.219", features = ["derive"] }
quick-xml = { version = "0.37.5", features = ["serde", "serialize"] }
bevy-tokio-tasks = "0.16.0"
tokio = { version = "1.45.0", features = ["full"] }
bevy = "0.16.0"

